--- a/CarOOP/CarOOP.csproj
+++ b/CarOOP/CarOOP.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Car.cs" />
+    <Compile Include="DateTimeExtention.cs" />
     <Compile Include="HeavyWeightCar.cs" />
     <Compile Include="IHeavyWeightCar.cs" />
     <Compile Include="ILightWeightCar.cs" />
